feat: add more styles

--- a/src/pages/MenuPage/styles.module.scss
+++ b/src/pages/MenuPage/styles.module.scss
@@ -11,9 +11,13 @@
 }
 
 .content {
-  padding: 8px;
+  padding: 16px;
   border: 2px solid var(--yellow);
   border-radius: 8px;
-  min-width: 240px;
+  min-width: 100%;
   text-align: center;
+
+  @media (min-width: 768px) {
+    min-width: 240px;
+  }
 }
