--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -2,7 +2,11 @@
   background: var(--yellow);
   border-radius: 4px;
   padding: 8px 16px;
-  font-size: 16px;
+  font-size: 24px;
   border: none;
   cursor: pointer;
+
+  @media (min-width: 768px) {
+    font-size: 16px;
+  }
 }
