--- a/src/components/Link/styles.module.scss
+++ b/src/components/Link/styles.module.scss
@@ -4,10 +4,14 @@
   text-decoration: none;
   padding: 8px 16px;
   display: inline-block;
-  font-size: 20px;
+  font-size: 24px;
 
   &:visited, &:link {
     color: var(--black);
+  }
+
+  @media (min-width: 768px) {
+    font-size: 16px;
   }
 
 }
