--- a/src/pages/RootPage/styles.module.scss
+++ b/src/pages/RootPage/styles.module.scss
@@ -3,9 +3,11 @@
   align-items: center;
   justify-content: center;
   margin-top: 48px;
+  padding: 0 8px;
 
   @media (min-width: 768px) {
     min-height: 100vh;
     margin-top: 0;
+    padding: 0;
   }
 }
