--- a/src/pages/MenuPage/styles.module.scss
+++ b/src/pages/MenuPage/styles.module.scss
@@ -1,23 +1,5 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-  align-items: center;
-}
-
 .title {
   font-size: 36px;
   font-weight: 700;
-}
-
-.content {
-  padding: 16px;
-  border: 2px solid var(--yellow);
-  border-radius: 8px;
-  min-width: 100%;
-  text-align: center;
-
-  @media (min-width: 768px) {
-    min-width: 240px;
-  }
+  margin-bottom: 32px;
 }
