--- a/src/pages/GamePage/styles.module.scss
+++ b/src/pages/GamePage/styles.module.scss
@@ -1,5 +1,8 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.title {
+  font-size: 28px;
+  margin-bottom: 32px;
+}
+
+.content {
+  width: 100%;
 }
