--- a/src/pages/GamePage/styles.module.scss
+++ b/src/pages/GamePage/styles.module.scss
@@ -5,6 +5,9 @@
 
 .content {
   min-width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   @media (min-width: 768px) {
     min-width: 240px;
