feat: add modal and logic to select winner

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -4,6 +4,8 @@
   --yellow: #FFF034;
   --purple: #73478B;
   --gray: #6D6E70;
+  --lightGray: #d3cccc;
+  --white: #f0f0f0;
 }
 
 *, *:before, *:after {
