--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -9,4 +9,11 @@
   @media (min-width: 768px) {
     font-size: 16px;
   }
+
+  &:disabled {
+    cursor: not-allowed;
+    background: #d3cccc;
+    color: var(--gray);
+    background: var(--lightGray);
+  }
 }
