--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -28,7 +28,7 @@ footer, header, nav, section, main {
   display: block;
 }
 
-body {
+body, button {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 400;
